# mini_ccl

./: CMakeLists.txt  LICENSE  README.md
include/: bootstrap.h  communicator.h  logger.h  topology.h  topology_factory.h  topology_fullmesh.h  topology_ring.h  transport.h  transport_factory.h  transport_rdma.h  transport_tcp.h  types.h  utils.h
scripts/: setup_dev_env.sh  setup_running_env.sh
src/: bootstrap.cpp  communicator.cpp  topology_fullmesh.cpp  topology_ring.cpp  transport_rdma.cpp  transport_tcp.cpp  utils.cpp
tests/: CMakeLists.txt  test_ccl.cpp  test_logger.cpp  test_misc.cpp  test_polling.cpp  test_transport_tcp.cpp  test_zero_copy.cpp
